<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
            android:id="@+id/tv_rank"
            tools:text="@string/dj_rank"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textStyle="bold"
            android:gravity="end"
            android:layout_marginHorizontal="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_marginEnd="8dp"
            android:layout_marginVertical="12dp"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:orientation="horizontal"
                android:padding="16dp"
                android:gravity="center"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="120dp">
            <ImageView
                    android:id="@+id/img_photo"
                    tools:src="@drawable/martingarrix"
                    android:scaleType="centerCrop"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"/>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                <TextView
                        android:id="@+id/tv_name"
                        tools:text="@string/dj_name"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:id="@+id/tv_desc"
                        tools:text="@string/dj_desc"
                        android:textColor="#ABABAB"
                        android:textSize="16sp"
                        android:maxLines="3"
                        android:ellipsize="end"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>