<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
            android:id="@+id/nav_detail"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:gravity="start|center_horizontal"
            android:background="#D15E5E"
            android:elevation="10dp">
        <ImageView
                android:onClick="backToMain"
                android:src="@drawable/ic_arrow_left"
                android:tint="@color/white"
                android:layout_width="30dp"
                android:layout_height="30dp"/>
    </LinearLayout>
    <androidx.core.widget.NestedScrollView
            android:background="#F8F8F8"
            android:layout_below="@id/nav_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:paddingVertical="40dp"
                android:paddingHorizontal="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                    android:id="@+id/img_detail"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/martingarrix"
                    android:layout_width="200dp"
                    android:layout_height="200dp"/>
            <TextView
                    android:id="@+id/detail_rank"
                    tools:text="@string/dj_rank"
                    android:textSize="24sp"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:padding="20dp"
                    android:layout_marginTop="-40dp"
                    android:gravity="center"
                    android:background="@drawable/ic_round"
                    android:backgroundTint="#E74F4F"
                    android:layout_width="70dp"
                    android:layout_height="70dp"/>
            <TextView
                    android:id="@+id/detail_name"
                    tools:text="@string/dj_name"
                    android:textAlignment="center"
                    android:textSize="32sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <LinearLayout
                    android:paddingHorizontal="60dp"
                    android:paddingVertical="20dp"
                    android:layout_marginHorizontal="20dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <LinearLayout
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                    <ImageButton
                            android:id="@+id/btn_like"
                            android:tag="Unliked"
                            android:background="@drawable/ic_favorite"
                            android:layout_width="40dp"
                            android:layout_height="40dp"/>
                    <TextView
                            android:id="@+id/tv_like"
                            android:text="@string/btn_like"
                            android:textSize="18sp"
                            android:textColor="@color/black"
                            android:padding="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                    <ImageButton
                            android:id="@+id/action_share"
                            android:background="@drawable/ic_share"
                            android:layout_width="40dp"
                            android:layout_height="40dp"/>
                    <TextView
                            android:text="@string/btn_share"
                            android:textSize="18sp"
                            android:textColor="@color/black"
                            android:padding="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
            <TextView
                    android:text="@string/detail_overview"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <View
                    android:layout_height="1dp"
                    android:layout_width="match_parent"
                    android:background="#949494"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="5dp"/>
            <TextView
                    android:id="@+id/detail_description"
                    android:text="@string/dj_desc"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:lineSpacingMultiplier="1.25"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:text="@string/detail_recent_release"
                    android:layout_marginTop="40dp"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <View
                    android:layout_height="1dp"
                    android:layout_width="match_parent"
                    android:background="#949494"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="5dp"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:paddingVertical="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_weight="10"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                    <TextView
                            android:id="@+id/tv_song_title"
                            tools:text="Gravity"
                            android:textSize="20sp"
                            android:textColor="@color/black"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    <TextView
                            android:id="@+id/tv_song_artists"
                            tools:text="Martin Garrix &amp; Sem Vox ft. Jaimes"
                            android:textSize="16sp"
                            android:textColor="#ABABAB"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                </LinearLayout>
                <ImageButton
                        android:id="@+id/btn_play"
                        android:background="@drawable/ic_spotify"
                        android:layout_width="40dp"
                        android:layout_height="40dp"/>
            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</RelativeLayout>